literales eliminados de los xml y añadidos a string.xml para futura localizacion

--- a/app/src/main/res/layout/activity_info_otro_usuario.xml
+++ b/app/src/main/res/layout/activity_info_otro_usuario.xml
@@ -38,7 +38,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
-                android:text="Nombre del Usuario"
+                android:text="@string/DEFAULT_NOMBRE_USUARIO"
                 android:ems="10"
                 android:id="@+id/textNombreUsuario"
                 android:layout_below="@+id/imagenOtroUsuario"
@@ -64,7 +64,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
-                android:text="Grups"
+                android:text="@string/DEFAULT_GRUPOS"
                 android:ems="10"
                 android:id="@+id/editTextGrups"
                 android:layout_below="@+id/textNombreUsuario"
@@ -74,7 +74,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
-                android:text="Esdeveniments"
+                android:text="@string/DEFAULT_EVENTOS"
                 android:ems="10"
                 android:id="@+id/editTextEsdeveniments"
                 android:layout_below="@+id/listaGruposUsuario"
