--- a/app/src/main/res/layout/activity_editar_evento.xml
+++ b/app/src/main/res/layout/activity_editar_evento.xml
@@ -53,7 +53,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:inputType="textPersonName"
-                android:hint="Escriba el nombre del evento"
+                android:hint="@string/ESCRIBE_NOMBRE_EVENTO"
                 android:ems="10"
                 android:fontFamily="sans-serif"
                 android:paddingLeft="5dp"
@@ -73,7 +73,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:inputType="textPersonName"
-                android:hint="Escribe la descripción de tu evento"
+                android:hint="@string/ESCRIBE_DESCRIPCION_EVENTO"
                 android:ems="10"
                 android:fontFamily="sans-serif"
                 android:paddingLeft="5dp"
@@ -109,7 +109,7 @@
                 <TextView
                     android:layout_width="200dp"
                     android:layout_height="match_parent"
-                    android:text="El evento será gratuito?"
+                    android:text="@string/EVENTO_GRATUITO_PREG"
                     android:fontFamily="sans-serif"
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
@@ -136,7 +136,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:inputType="textPersonName"
-                android:hint="Escriba el precio del evento"
+                android:hint="@string/ESCRIBE_PRECIO_EVENTO"
                 android:ems="10"
                 android:fontFamily="sans-serif"
                 android:paddingLeft="5dp"
@@ -156,7 +156,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:inputType="textPersonName"
-                android:hint="En el caso que se puedan comprar online, escribe la URL de venta de entradas"
+                android:hint="@string/ESCRIBE_URL_ENTRADAS"
                 android:ems="10"
                 android:fontFamily="sans-serif"
                 android:paddingLeft="5dp"
@@ -178,7 +178,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:inputType="textPersonName"
-                android:hint="Escriba el lugar del evento"
+                android:hint="ESCRIBE_LUGAR_EVENTO"
                 android:ems="10"
                 android:fontFamily="sans-serif"
                 android:paddingLeft="5dp"
@@ -206,7 +206,7 @@
                 <EditText
                     android:layout_width="250dp"
                     android:inputType="textPersonName"
-                    android:hint="dd/mm/yyyy hh:mm"
+                    android:hint="@string/DEFAULT_FORMATO_FECHA"
                     android:ems="10"
                     android:fontFamily="sans-serif"
                     android:paddingLeft="5dp"
@@ -244,7 +244,7 @@
                 />
 
             <Button
-                android:text="Guardar Cambios"
+                android:text="@string/DEFAULT_GUARDAR_CAMBIOS"
                 android:id="@+id/buttonAcceptar"
                 android:background="@drawable/botton_application"
                 android:layout_width="150dp"
