--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,11 +62,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="goEditarEvento" />
+
         <Button
             android:text="Crear Usuaio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="goCrearUsuario" />
+
+        <Button
+            android:text="evetos usuarios que sigo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="goVerEventosUsuariosQueSigo"
+            android:id="@+id/button7" />
 
     </LinearLayout>
 </ScrollView>
