--- a/app/src/main/res/layout/activity_ver_info_grupo.xml
+++ b/app/src/main/res/layout/activity_ver_info_grupo.xml
@@ -153,8 +153,7 @@
                 android:layout_below="@+id/EventosTitulo"
                 android:layout_alignStart="@+id/EventosTitulo"
                 android:layout_marginRight="15dp"
-                android:layout_height="105dp"
-                android:background="#ffff" />
+                android:layout_height="105dp" />
 
 
         </RelativeLayout>
