--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,5 +68,12 @@
             android:layout_height="wrap_content"
             android:onClick="goCrearUsuario" />
 
+        <Button
+            android:text="CAMBIAR MODO"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/buttonCambiarModo"
+            android:onClick="cambiarModo" />
+
     </LinearLayout>
 </ScrollView>
