--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,7 +29,10 @@
             android:orientation="vertical"
             tools:context="com.pes12.pickanevent.view.LoginActivity"
             android:weightSum="1">
-
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Correo"/>
 
                 <EditText
                     android:id="@+id/correo"
@@ -38,6 +41,10 @@
                     android:hint="alguien@correo.com"
                     android:inputType="textEmailAddress"
                     />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Contraseña"/>
                 <EditText
                     android:id="@+id/pass"
                     android:layout_width="match_parent"
