--- a/app/src/main/res/layout/app_bar_navigation_drawer.xml
+++ b/app/src/main/res/layout/app_bar_navigation_drawer.xml
@@ -21,6 +21,11 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_navigation_drawer" />
+    <FrameLayout
+        android:id="@+id/main_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+
+        android:orientation="vertical" />
 
 </android.support.design.widget.CoordinatorLayout>
