--- a/app/src/main/res/layout/activity_crear_evento.xml
+++ b/app/src/main/res/layout/activity_crear_evento.xml
@@ -175,7 +175,7 @@
                 android:layout_centerHorizontal="true"
                 android:gravity="top" />
 
-            <EditText
+            <AutoCompleteTextView
                 android:layout_width="match_parent"
                 android:inputType="textPersonName"
                 android:hint="@string/ESCRIBE_LUGAR_EVENTO"
@@ -194,6 +194,26 @@
                 android:layout_marginTop="10dp"
                 android:layout_below="@+id/editorEntradas"
                 android:layout_centerHorizontal="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+            <!-- .............. GOOGLE PLACES API ....... -->
+            <ListView android:id="@+id/listView1"
+                android:layout_width="match_parent"
+                android:layout_height="46dp"
+                android:layout_below="@+id/editorLugar"
+                android:fontFamily="sans-serif"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:textSize="18sp"
+                android:textStyle="normal"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:layout_marginTop="10dp"/>
+
+            <!-- ..................................... -->
 
             <EditText
                 android:layout_width="match_parent"
@@ -216,7 +236,7 @@
                 android:layout_below="@+id/editorLugar"
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp" />
-                    android:layout_marginRight="25dp" />
+
             <EditText
                 android:layout_width="match_parent"
                 android:inputType="textPersonName"
