--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         tools:context="com.pes12.pickanevent.view.MainActivity"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:weightSum="1">
 
         <Button
             android:layout_width="wrap_content"
@@ -79,6 +80,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="goSignOut" />
+
+        <Button
+            android:text="VER INFORMACIÓN DE GRUPOS CREADOS"
+            android:layout_width="269dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/buttonVerInformacionDeGruposCreados"
+            android:layout_weight="0.05"
+            android:onClick="goVerGruposCreados" />
 
         <Button
             android:text="CAMBIAR MODO"
