--- a/app/src/main/res/layout/activity_editar_evento.xml
+++ b/app/src/main/res/layout/activity_editar_evento.xml
@@ -175,10 +175,10 @@
                 android:layout_centerHorizontal="true"
                 android:gravity="top" />
 
-            <EditText
+            <AutoCompleteTextView
                 android:layout_width="match_parent"
                 android:inputType="textPersonName"
-                android:hint="ESCRIBE_LUGAR_EVENTO"
+                android:hint="@string/ESCRIBE_LUGAR_EVENTO"
                 android:ems="10"
                 android:fontFamily="sans-serif"
                 android:paddingLeft="5dp"
@@ -194,6 +194,26 @@
                 android:layout_marginTop="10dp"
                 android:layout_below="@+id/editorEntradas"
                 android:layout_centerHorizontal="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+            <!-- .............. GOOGLE PLACES API ....... -->
+            <ListView android:id="@+id/listView1"
+                android:layout_width="match_parent"
+                android:layout_height="46dp"
+                android:layout_below="@+id/editorLugar"
+                android:fontFamily="sans-serif"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:textSize="18sp"
+                android:textStyle="normal"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:layout_marginTop="10dp"/>
+
+            <!-- ..................................... -->
 
             <RelativeLayout
                 android:layout_width="fill_parent"
