Spinner BuscarEvento (Fixed) :dancer:

--- a/app/src/main/res/layout/activity_buscar_evento.xml
+++ b/app/src/main/res/layout/activity_buscar_evento.xml
@@ -10,15 +10,49 @@
     android:background="#bfffc2">
 
 
+    <Button
+        android:text="@string/DEFAULT_BUSCAR_EVENTO"
+        android:id="@+id/buscarEvento"
+        android:background="@drawable/botton_application"
+        android:layout_width="150dp"
+        android:layout_marginRight="10dp"
+        android:layout_height="30dp"
+        android:radius="20dip"
+        android:layout_marginTop="30dp"
+        android:layout_below="@+id/selectLugar"
+        android:layout_centerHorizontal="true" />
+
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="87dp"
         android:id="@+id/spinner"
         android:background="#008040"
         android:spinnerMode="dropdown"
         android:entries="@array/options_array"
-        />
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="@string/ESCRIBE_NOMBRE_EVENTO"
+        android:ems="10"
+        android:layout_marginTop="33dp"
+        android:id="@+id/selectEvento"
+        android:layout_below="@+id/spinner"
+        android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="@string/ESCRIBE_LUGAR_EVENTO"
+        android:ems="10"
+        android:id="@+id/selectLugar"
+        android:layout_alignBaseline="@+id/selectEvento"
+        android:layout_alignBottom="@+id/selectEvento"
+        android:layout_alignStart="@+id/selectEvento" />
+
 </RelativeLayout>
