--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -124,5 +124,12 @@
             android:id="@+id/button3"
             android:onClick="goIndicarTags" />
 
+        <Button
+            android:text="Ver mi perfil"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/buttonVerMiPerfil"
+            android:onClick="goVerMiPerfil" />
+
     </LinearLayout>
 </ScrollView>
