funcio parseEventViewToEntity() creada al base activity per a que la utilitzin tant el editarEvento com el crearEventoActivity ja que fan el mateix

--- a/app/src/main/res/layout/activity_crear_evento.xml
+++ b/app/src/main/res/layout/activity_crear_evento.xml
@@ -262,7 +262,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:inputType="textPersonName"
-                android:hint="Hora del evento (hh.mm)"
+                android:hint="Hora del evento (hh:mm)"
                 android:ems="10"
                 android:fontFamily="sans-serif"
                 android:paddingLeft="5dp"
