--- a/app/src/main/res/layout/activity_perfil_usuario.xml
+++ b/app/src/main/res/layout/activity_perfil_usuario.xml
@@ -42,31 +42,56 @@
                 android:onClick="abrirGaleria"
                 android:layout_above="@+id/correo"
                 android:layout_alignParentStart="true" />
-
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
             <TextView
-
                 android:layout_height="wrap_content"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
+                android:text="Nickname: "
+                android:ems="10"
+                android:id="@+id/nickNameLabel"
+                />
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
                 android:text="@string/DEFAULT_NOMBRE_USUARIO"
                 android:ems="10"
                 android:id="@+id/nickName"
-                android:layout_below="@+id/imagen"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentEnd="true" />
+                />
+           </LinearLayout>
 
-
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="Email: "
+                android:ems="10"
+                android:id="@+id/correoLabel"
+                />
 
             <TextView
 
                 android:layout_height="wrap_content"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:text="@string/DEFAULT_GRUPOS"
                 android:ems="10"
                 android:id="@+id/correo"
-                android:layout_below="@+id/nickName"
-                android:layout_alignParentStart="true" />
+                />
+        </LinearLayout>
 
 
+            <Button
+                android:text="Reiniciar contraseña"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/buttonRestart"
+                android:onClick="restartPassword"
+                 />
 
 
         </LinearLayout>
