--- a/app/src/main/res/layout/activity_buscar_evento.xml
+++ b/app/src/main/res/layout/activity_buscar_evento.xml
@@ -24,7 +24,7 @@
         android:radius="20dip"
         android:onClick="buscarEvento"
         android:layout_marginTop="74dp"
-        android:layout_below="@+id/selectEvento"
+        android:layout_below="@+id/textoNombreEvento"
         android:layout_centerHorizontal="true" />
 
     <EditText
@@ -35,8 +35,8 @@
         android:textColorHint="#8a939d"
         android:ems="10"
         android:fontFamily="sans-serif"
-        android:layout_marginTop="79dp"
-        android:id="@+id/selectEvento"
+        android:layout_marginTop="30dp"
+        android:id="@+id/textoNombreEvento"
         android:background="#eceff1"
         android:textStyle="normal"
         android:layout_below="@+id/spinner"
@@ -50,12 +50,42 @@
         android:textColorHint="#8a939d"
         android:ems="10"
         android:fontFamily="sans-serif"
-        android:id="@+id/selectLugar"
+        android:layout_marginTop="30dp"
+        android:id="@+id/textoLugarEvento"
         android:background="#eceff1"
         android:textStyle="normal"
-        android:layout_alignBaseline="@+id/selectEvento"
-        android:layout_alignBottom="@+id/selectEvento"
-        android:layout_alignStart="@+id/selectEvento" />
+        android:layout_below="@+id/spinner"
+        android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:inputType="textPersonName"
+        android:hint="@string/ESCRIBE_NOMBRE_USUARIO"
+        android:textColorHint="#8a939d"
+        android:ems="10"
+        android:fontFamily="sans-serif"
+        android:layout_marginTop="35dp"
+        android:id="@+id/textoUsuario"
+        android:background="#eceff1"
+        android:textStyle="normal"
+        android:layout_below="@+id/spinner2"
+        android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:inputType="textPersonName"
+        android:hint="@string/ESCRIBE_NOMBRE_GRUPO"
+        android:textColorHint="#8a939d"
+        android:ems="10"
+        android:fontFamily="sans-serif"
+        android:layout_marginTop="35dp"
+        android:id="@+id/textoGrupo"
+        android:background="#eceff1"
+        android:textStyle="normal"
+        android:layout_below="@+id/spinner2"
+        android:layout_centerHorizontal="true" />
 
     <Spinner
         android:layout_width="match_parent"
@@ -77,6 +107,13 @@
         android:spinnerMode="dropdown"
         android:entries="@array/busqueda_array"
         android:layout_below="@+id/toolbar"
+        android:layout_alignParentStart="true" />
+
+    <ListView
+        android:id="@+id/lista"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true" />
 
 </RelativeLayout>
