--- a/app/src/main/res/layout/vista_adapter_lista.xml
+++ b/app/src/main/res/layout/vista_adapter_lista.xml
@@ -14,6 +14,7 @@ android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:id="@+id/layoutAdapter"
     >
 
     <TextView android:id="@+id/text1" android:layout_width="match_parent"
