--- a/app/src/main/res/layout/activity_ver_info_grupo.xml
+++ b/app/src/main/res/layout/activity_ver_info_grupo.xml
@@ -109,24 +109,31 @@
                 android:layout_marginTop="10dp"
                 android:layout_height="21dp" />
 
-            <TextView
+            <HorizontalScrollView
                 android:layout_width="match_parent"
-                android:id="@+id/tags"
-                android:fontFamily="sans-serif"
-                android:paddingRight="10dp"
-                android:textSize="16sp"
-                android:textColor="#000"
-                android:scrollbars="vertical"
-                android:background="@drawable/borde"
+                android:layout_height="30dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:layout_height="wrap_content"
-                android:paddingLeft="10dp"
+                android:id="@+id/TagsScrollView"
+                android:layout_below="@+id/etiquetas">
 
-                android:layout_below="@+id/etiquetas"
-                android:layout_alignParentStart="true"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/Tags">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="prova1" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="prova2"/>
+
+                </LinearLayout>
+
+            </HorizontalScrollView>
 
             <TextView
                 android:text="@string/DEFAULT_EVENTOS"
@@ -143,7 +150,7 @@
                 android:layout_height="24dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:layout_below="@+id/tags"
+                android:layout_below="@+id/TagsScrollView"
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="10dp" />
 
@@ -153,7 +160,7 @@
                 android:layout_below="@+id/EventosTitulo"
                 android:layout_alignStart="@+id/EventosTitulo"
                 android:layout_marginRight="15dp"
-                android:layout_height="105dp" />
+                android:layout_height="155dp" />
 
 
         </RelativeLayout>
