--- a/app/src/main/res/layout/vista_adapter_lista.xml
+++ b/app/src/main/res/layout/vista_adapter_lista.xml
@@ -6,6 +6,11 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
     android:background="#ffff">
 
+<TextView
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    android:id="@+id/id"/>
+
 <ImageView android:id="@+id/icon" android:layout_width="50dp"
     android:layout_height="50dp"
     android:layout_marginLeft="2dp" />
