--- a/app/src/main/res/layout/fragment_grupos.xml
+++ b/app/src/main/res/layout/fragment_grupos.xml
@@ -2,12 +2,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.pes12.pickanevent.view.GruposFragment">
+    tools:context="com.pes12.pickanevent.view.GruposFragment"
+    android:background="#bfffc2">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical" >
 
+        <TextView
+            android:text="Mis Grupos"
+            android:layout_width="match_parent"
+            android:id="@+id/EventosTituloMainline"
+            android:fontFamily="sans-serif"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:textSize="16sp"
+            android:textColor="#000"
+            android:scrollbars="vertical"
+            android:background="#fff"
+            android:textStyle="normal|bold"
+            android:layout_height="24dp"
+
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="64dp" />
+
+        <ListView
+            android:layout_width="match_parent"
+            android:id="@+id/eventtimeline"
+            android:layout_below="@+id/EventosTituloMainline"
+            android:layout_alignStart="@+id/EventosTituloMainline"
+
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
 </FrameLayout>
